[gd_scene load_steps=24 format=2]

[ext_resource path="res://5x5.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/Level1.gd" type="Script" id=2]
[ext_resource path="res://picross.tres" type="Theme" id=3]
[ext_resource path="res://assets/dialogue/dialogue.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/BGPuzzle.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/Ornaments.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/GJ_Ornament.png" type="Texture" id=7]
[ext_resource path="res://Menu.tres" type="Theme" id=8]
[ext_resource path="res://assets/audio/Finish.wav" type="AudioStream" id=9]
[ext_resource path="res://Menu/continueButton_text.png" type="Texture" id=10]
[ext_resource path="res://Menu/blueButton.png" type="Texture" id=11]
[ext_resource path="res://Menu/blueButtonHovered.png" type="Texture" id=12]
[ext_resource path="res://assets/audio/Credits.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/Peepo.ttf" type="DynamicFontData" id=14]

[sub_resource type="Animation" id=7]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "appear"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="GDScript" id=1]
script/source = "extends Camera2D
"

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=2]
length = 6.0

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "next_scene"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.523809 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Level1" type="Node2D"]
script = ExtResource( 2 )

[node name="solved" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="next_level" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="bgm_fade" type="AnimationPlayer" parent="."]
root_node = NodePath("../bgm")
anims/fade = SubResource( 7 )

[node name="BgPuzzle" type="Sprite" parent="."]
position = Vector2( 97, 84.75 )
scale = Vector2( 1.21786, 1.21786 )
texture = ExtResource( 5 )

[node name="continue" type="HBoxContainer" parent="."]
visible = false
margin_left = 69.0
margin_top = 150.0
margin_right = 123.0
margin_bottom = 162.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="TextureButton" parent="continue"]
margin_right = 54.0
margin_bottom = 12.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="text" type="Sprite" parent="continue"]
position = Vector2( 27, 6 )
texture = ExtResource( 10 )

[node name="appear" type="AnimationPlayer" parent="."]
root_node = NodePath("../GjOrnament")
anims/RESET = SubResource( 5 )
anims/appear = SubResource( 6 )

[node name="GjOrnament" type="Sprite" parent="."]
visible = false
position = Vector2( 97, 90 )
scale = Vector2( 2.54, 2.54 )
texture = ExtResource( 7 )

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.15, 0.15 )
script = SubResource( 1 )

[node name="Level 1" type="Label" parent="."]
margin_left = 8.0
margin_top = 3.0
margin_right = 184.0
margin_bottom = 27.0
theme = ExtResource( 3 )
text = "Level 1 - Ornaments"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B1" parent="." instance=ExtResource( 1 )]
process_priority = 5
position = Vector2( 32, 32 )

[node name="dialogue" parent="." instance=ExtResource( 4 )]
offset = Vector2( 145, 15 )
scale = Vector2( 2.5, 2.5 )
transform = Transform2D( 2.5, 0, 0, 2.5, 145, 15 )
dialogue = "res://assets/dialogue/json/level1.json"

[node name="GoodWork" type="Label" parent="."]
visible = false
margin_left = 60.0
margin_top = 20.0
margin_right = 133.0
margin_bottom = 38.0
theme = ExtResource( 8 )
text = "Good Work!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 13.0
margin_top = 41.0
margin_right = 26.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R0" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 39.0
margin_right = 50.0
margin_bottom = 55.0
theme = ExtResource( 3 )
text = "3 1"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R1" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 23.0
margin_right = 50.0
margin_bottom = 39.0
theme = ExtResource( 3 )
text = "3"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R2" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 55.0
margin_right = 50.0
margin_bottom = 71.0
theme = ExtResource( 3 )
text = "5"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R3" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 71.0
margin_right = 50.0
margin_bottom = 87.0
theme = ExtResource( 3 )
text = "5"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R4" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 87.0
margin_right = 50.0
margin_bottom = 103.0
theme = ExtResource( 3 )
text = "3"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C0" type="Label" parent="Panel"]
margin_left = 52.0
margin_top = -9.0
margin_right = 66.0
margin_bottom = 23.0
theme = ExtResource( 3 )
text = "3"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C1" type="Label" parent="Panel"]
margin_left = 68.0
margin_top = -9.0
margin_right = 82.0
margin_bottom = 23.0
theme = ExtResource( 3 )
text = "5"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C2" type="Label" parent="Panel"]
margin_left = 84.0
margin_top = -9.0
margin_right = 98.0
margin_bottom = 23.0
theme = ExtResource( 3 )
text = "5"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C3" type="Label" parent="Panel"]
margin_left = 100.0
margin_top = -9.0
margin_right = 114.0
margin_bottom = 23.0
theme = ExtResource( 3 )
text = "1
3"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C4" type="Label" parent="Panel"]
margin_left = 116.0
margin_top = -9.0
margin_right = 130.0
margin_bottom = 23.0
theme = ExtResource( 3 )
text = "3"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_finish" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Reset" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 150.0
margin_right = 58.0
margin_bottom = 182.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="TextureButton" parent="Reset"]
margin_right = 54.0
margin_bottom = 12.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetLabel" type="Label" parent="."]
margin_left = 18.0
margin_top = 147.0
margin_right = 72.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 9 )
text = "Reset"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition" type="AnimationPlayer" parent="."]
root_node = NodePath("../fade")
anims/RESET = SubResource( 2 )
anims/fade_out = SubResource( 3 )
anims/next_scene = SubResource( 8 )

[node name="fade" type="ColorRect" parent="."]
visible = false
margin_left = -1.0
margin_top = -0.999998
margin_right = 99.0
margin_bottom = 99.0
rect_scale = Vector2( 100, 100 )
mouse_filter = 2
color = Color( 1, 1, 1, 0.714286 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="continue/button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="level_finish" to="." method="level_finish"]
[connection signal="pressed" from="Reset/ResetButton" to="." method="_on_ResetButton_pressed"]
